@@ -183,7 +183,7 @@
 		    </div>
 
                     <div class="col-sm-3" style="">
-                    <label class="label label-edit-search"">Gender</label><br>
+                    <label class="label label-edit-search"">Sex</label><br>
                     <select type=dropdown size="1" id="gender" tabindex="-1"
                             ng-options="choice.termKey as choice.term for choice in vm.genderLookup"
                             ng-model="vm.apiDomain.probeSource.genderKey"
