@@ -139,7 +139,7 @@
                 <div class="spacer"></div>
                 <div class="row topMargin">
                 <div class="col-sm-3" style="">
-                        <label class="label label-search">Gender</label><br>
+                        <label class="label label-search">Sex</label><br>
                        <select type=dropdown size="1" id="gender"  tabindex="-1"
 			ng-options="choice.termKey as choice.term for choice in vm.genderLookup"
                                ng-model="vm.apiDomain.genderKey"
